--- a/package.json
+++ b/package.json
@@ -4,5 +4,6 @@
   "main": "index.js",
   "repository": "https://github.com/AngeloLanch/pirahub.git",
   "author": "Angelo <angelo.pjsol@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module"
 }
